--- a/src/main/themes/cpf/pos-esso.scss
+++ b/src/main/themes/cpf/pos-esso.scss
@@ -1,3 +1,6 @@
+$header-height: 72px;
+$header-bg: #eaf5f9;
+$sidebar-header-bg: #eaf5f9;
 $sidebar-header-height: 72px;
 $sidebar-min: 72px;
 $sidebar-max: 426px;
@@ -22,13 +25,16 @@ $sidebar-padding: 16px;
 .pos-esso-header {
   grid-area: hd;
 
-  height: 96px;
-  background: #ffffff;
+  height: $header-height;
+  background: $header-bg;
 }
 
 .pos-esso-sidebar {
   grid-area: sb;
   height: 100%;
+
+  .pos-esso-sidebar {
+  }
 
   background: #ffffff;
   box-shadow: 0px 4px 6px #e5e5e5, 0px 0px 1px rgba(33, 37, 41, 0.32);
@@ -42,18 +48,20 @@ $sidebar-padding: 16px;
   &.is-active {
     width: $sidebar-max;
 
-    .sidebar-nav-link{
-        gap: 16px;
-        padding: 12px 16px;
+    .sidebar-nav{
+        padding: 16px;
     }
-    .sidebar-nav-text{
-        display: block  ;
+    .sidebar-nav-link {
+      gap: 16px;
+      padding: 12px 16px;
+    }
+    .sidebar-nav-text {
+      display: block;
     }
   }
 
   .sidebar-header {
-    // height: $sidebar-header-height;
-    background-color: #eaf5f9;
+    background-color: $sidebar-header-bg;
     padding: $sidebar-padding;
   }
   .sidebar-body {
@@ -98,13 +106,13 @@ $sidebar-padding: 16px;
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 16px;
+  padding: 10px;
 }
 
 .sidebar-nav-link {
   display: flex;
   align-items: center;
-  
+
   border-radius: 16px;
 }
 
@@ -124,8 +132,7 @@ $sidebar-padding: 16px;
   justify-items: center;
   align-items: center;
 
-//   background-color: #fff;
-  background-size: 100%;
+  background-size: 28px;
   background-repeat: no-repeat;
   background-position: center;
 
@@ -149,4 +156,84 @@ $sidebar-padding: 16px;
 .sidebar-nav-text {
   flex: 1;
   display: none;
+}
+
+.screenContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: calc(100vh - $header-height);
+  overflow-y: auto;
+  padding: 16px;
+}
+/**
+*
+*/
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 1px 1px rgba(104, 120, 171, 0.14),
+    0px 2px 1px rgba(104, 120, 171, 0.12), 0px 1px 3px rgba(104, 120, 171, 0.2);
+
+}
+.cardHeader {
+  padding: 16px;
+  background: #eaf5f9;
+  /* Shadow/1dp */
+
+  border-radius: 8px 8px 0px 0px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  align-items: center;
+  gap: 8px;
+
+  &.is-active .cardHeaderArrow {
+    transform: rotate(-180deg);
+  }
+}
+
+.cardContent {
+  background: #ffffff;
+  /* Shadow/1dp */
+
+  box-shadow: 0px 1px 1px rgba(104, 120, 171, 0.14),
+    0px 2px 1px rgba(104, 120, 171, 0.12), 0px 1px 3px rgba(104, 120, 171, 0.2);
+  border-radius: 0px 0px 8px 8px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+
+  > * {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+.cardHeaderTitle {
+  font-family: "IBM Plex Sans Thai";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+
+  line-height: 40px;
+}
+.cardHeaderArrow {
+  width: 40px;
+  height: 40px;
+
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(./icons/Arrow-Sort-Small.png);
 }
