--- a/src/main/themes/cpf/pos-esso-responsive.scss
+++ b/src/main/themes/cpf/pos-esso-responsive.scss
@@ -1,8 +1,6 @@
 @media (min-width: 768px) {
   .pos-esso {
-  
     .row {
-
       .col-sm {
         flex: 1 0 0%;
       }
@@ -15,6 +13,27 @@
     }
   }
 }
+
 @media (min-width: 576px) {
-  
+  .layout-screen {
+    display: flex;
+    height: 100%;
+
+    .col-left {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+
+    .col-right {
+      flex: 0 0 50%;
+      max-width: 50%;
+      background-color: green;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 }
