--- a/src/main/themes/cpf/pos-esso.scss
+++ b/src/main/themes/cpf/pos-esso.scss
@@ -35,9 +35,6 @@ $gap: 16px;
   grid-area: sb;
   height: 100%;
 
-  .pos-esso-sidebar {
-  }
-
   background: #ffffff;
   box-shadow: 0px 4px 6px #e5e5e5, 0px 0px 1px rgba(33, 37, 41, 0.32);
   width: $sidebar-min;
@@ -48,7 +45,22 @@ $gap: 16px;
   z-index: 200;
 
   &.is-active {
-    width: $sidebar-max;
+
+    .sidebar-drawer{
+
+      width: $sidebar-max;
+
+      .sidebar-backdrop{
+        display: block;
+      }
+
+      .sidebar-container {
+        width: $sidebar-max;
+      }
+    }
+
+
+    // width: $sidebar-max;
 
     .sidebar-nav {
       padding: 16px;
@@ -107,6 +119,9 @@ $gap: 16px;
   }
 }
 
+/**
+ sidebar
+*/
 .sidebar-nav {
   display: flex;
   flex-direction: column;
@@ -163,6 +178,37 @@ $gap: 16px;
   display: none;
 }
 
+
+
+.sidebar-drawer {
+  transition: width 100ms cubic-bezier(0.15, 0.15, 0, 1) 0s;
+  position: fixed;
+  inset: 0;
+  z-index: 100;
+  width: $sidebar-min;
+  overflow: hidden;
+
+  .sidebar-backdrop {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+  }
+
+  .sidebar-container {
+    transition: width 100ms cubic-bezier(0.15, 0.15, 0, 1) 0s;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #fff;
+    width: $sidebar-min;
+
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .screenContainer {
   display: flex;
   flex-direction: column;
@@ -170,6 +216,8 @@ $gap: 16px;
   height: calc(100vh - $header-height);
   overflow-y: auto;
   padding: 16px;
+
+  
 }
 /**
 *
@@ -242,13 +290,11 @@ $gap: 16px;
   background-image: url(./icons/Arrow-Sort-Small.png);
 }
 
-
 .layout-screen {
-
   // div {
   //   display: block;
   // }
-  
+
   .table-layout {
     display: flex;
     flex-direction: column;
@@ -268,7 +314,7 @@ $gap: 16px;
     .filter-row {
       display: flex;
       gap: $gap;
-
+      flex-wrap: nowrap;
 
       .filter-input {
         background: #ffffff;
@@ -306,5 +352,3 @@ $gap: 16px;
     min-width: 200px;
   }
 }
-
-
